# SpectraC

./: CMakeLists.txt  README.md  test.spct
src/: main.cpp  pch.hpp  types.hpp
src/lang/: args.hpp  run.cpp  run.hpp
src/lexer/: keywords.cpp  keywords.hpp  lexer.cpp  lexer.hpp  token.hpp  token_type.cpp  token_type.hpp
src/parser/: ast.hpp  grammar.cpp  grammar.hpp  grammer.cpp  grammer.hpp  parser.cpp  parser.hpp  symbol.hpp
